# vroomrs

./: .craft.yml  .envrc  .gitignore  Cargo.toml  Makefile  main.py  pyproject.toml  requirements-dev.txt  vroomrs.pyi
.github/workflows/: CI.yml  build.yml  release.yml
scripts/: bump-version.sh
src/: debug_images.rs  lib.rs  nodetree.rs  profile.rs  profile_chunk.rs  types.rs
src/android/: chunk.rs  mod.rs  profile.rs
src/chunk/: android.rs  mod.rs  sample.rs
src/clientsdk/: mod.rs
src/debugmeta/: mod.rs
src/frame/: mod.rs  python_std_lib.rs
src/measurements/: mod.rs
src/occurrence/: detect_frame.rs  frame_drop.rs  mod.rs
src/packageutil/: mod.rs
src/platform/: mod.rs
src/profile/: android.rs  mod.rs
src/sample/: mod.rs  v1.rs  v2.rs
tests/fixtures/android/chunk/: valid.json  valid_2_android_trace.json
tests/fixtures/sample/v2/: valid_android.json  valid_cocoa.json
