[package]
name = "rust-vroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_vroom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = { version = "0.1.16" }